--- a/HsShowCase/locale/zh_CN/utility.properties
+++ b/HsShowCase/locale/zh_CN/utility.properties
@@ -1,3 +1,4 @@
+util.oauth.name=OAuth请求字符串生成工具
 util.oauth.consumerKey=Consumer Key
 util.oauth.consumerSecret=Consumer Secret
 util.oauth.tokenKey=Req/Acc Token Key
