--- a/trunk/HsShowCase/locale/en_US/utility.properties
+++ b/trunk/HsShowCase/locale/en_US/utility.properties
@@ -6,3 +6,5 @@ util.oauth.tokenSecret=Req/Acc Token Secret
 util.oauth.result=Result
 util.oauth.generate=Generate
 util.oauth.url=API URL
+
+util.matrix.name=Math Matrix
