--- a/trunk/HsShowCase/locale/zh_CN/utility.properties
+++ b/trunk/HsShowCase/locale/zh_CN/utility.properties
@@ -6,3 +6,5 @@ util.oauth.tokenSecret=Req/Acc Token Secret
 util.oauth.result=结果
 util.oauth.generate=生成
 util.oauth.url=API地址
+
+util.matrix.name=数学矩阵
